// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. mobile primary image with caption and credits 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c1 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c2 {
  padding-left: 10px;
}

@media (min-width:768px) {
  .c2 {
    padding-left: 0px;
  }
}

Array [
  <div
    className="css-view-1dbjc4n"
  >
    <TimesImage
      accessibilityLabel="Some caption"
      aspectRatio={1.25}
      caption={
        <Caption
          credits="Some credits"
          text="Some caption"
        />
      }
      disablePlaceholder={false}
      fadeImageIn={false}
      highResSize={null}
      lowResSize={null}
      onImagePress={null}
      rounded={false}
      uri="https://img/someImage"
    />
  </div>,
  <div
    className="css-view-1dbjc4n"
  >
    <responsive__InsetCaptionStyle>
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "responsive__InsetCaptionStyle-sc-1io40fc-2",
              "isStatic": true,
              "lastClassName": "c2",
              "rules": Array [
                "padding-left:",
                "10px",
                ";@media (min-width:",
                "768",
                "px){padding-left:0px;}",
              ],
            },
            "displayName": "responsive__InsetCaptionStyle",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "responsive__InsetCaptionStyle-sc-1io40fc-2",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="c2 responsive__InsetCaptionStyle-sc-1io40fc-2 c2 css-view-1dbjc4n"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <div
              className="css-view-1dbjc4n r-paddingTop-m611by"
            >
              <div
                className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0"
              >
                Some caption
              </div>
              <div
                className="css-text-901oao r-color-1khnkhu r-fontFamily-j2s0nr r-fontSize-qqjak8 r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-5fcqz0"
              >
                SOME CREDITS
              </div>
            </div>
          </div>
        </div>
      </StyledComponent>
    </responsive__InsetCaptionStyle>
  </div>,
]
`;

exports[`2. secondary image with caption and credits 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c1 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

Array [
  <div
    className="css-view-1dbjc4n r-width-1f720gc"
  >
    <TimesImage
      accessibilityLabel="Another caption"
      aspectRatio={1.5}
      caption={
        <Caption
          credits="Other credits"
          text="Another caption"
        />
      }
      disablePlaceholder={false}
      fadeImageIn={false}
      highResSize={null}
      lowResSize={null}
      onImagePress={null}
      rounded={false}
      uri="https://img/someImage"
    />
  </div>,
  <div
    className="css-view-1dbjc4n r-paddingLeft-1hfyk0a r-paddingTop-wk8lta r-width-1f720gc"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n r-paddingTop-wk8lta"
      >
        <div
          className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0"
        >
          Another caption
        </div>
        <div
          className="css-text-901oao r-color-1khnkhu r-fontFamily-j2s0nr r-fontSize-qqjak8 r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-5fcqz0"
        >
          OTHER CREDITS
        </div>
      </div>
    </div>
  </div>,
]
`;
